--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <section id="banner">
     <img src="img/simoiea.png" class="logo">
     <div class="banner-text">
-        <h1>hej</h1>
+        <h1>Home</h1>
         <p>Välkommen hit!</p>
         <div class="banner-btn">
             <a href="skola.html"><span></span>Skola</a>
