--- a/privat.html
+++ b/privat.html
@@ -18,7 +18,7 @@
 <section id="banner">
     <img src="img/simoiea.png" class="logo">
     <div class="banner-text">
-        <h1>Privat1111111</h1>
+        <h1>Privat</h1>
         <p>Välkommen hit!</p>
         <div class="banner-btn">
             <a href="skola.html"><span></span>Skola</a>
