--- a/privat.html
+++ b/privat.html
@@ -51,7 +51,7 @@
         <p>Information</p>
         <br>
         <br><br>
-        <h3>Comming soon...</h3>
+        <h3>Coming soon...</h3>
     </div>
 
 </section>
@@ -61,7 +61,7 @@
         <p>Bakgrund</p>
         <h1></h1>
         <br>
-        <h3>Comming soon...</h3>
+        <h3>Coming soon...</h3>
     </div>
 
 </section>
@@ -71,7 +71,7 @@
         <p>Annat</p>
         <h1></h1>
         <br>
-        <h3>Comming soon...</h3>
+        <h3>Coming soon...</h3>
     </div>
 
 </section>
