--- a/skola.html
+++ b/skola.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width = device-width, initial-scale=1">
 
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
 <section id="banner">
@@ -39,183 +42,126 @@
     <img src="img/menu.png" id="menu">
 </div>
 
-<section id="service">
+<section id="acordion">
     <div class="title-text">
         <p>Länkar</p>
     </div>
 
-    <div class="service-box">
-        <div class="single-service">
-
-            <img src="img/schema.jpg">
-            <div class="overlay"></div>
-                <div class="service-desc">
-                    <h3>SCHEMA</h3>
-                    <hr>
-                </div>
-            <div class="service-desc-4">
-
-
-                <div class="zoom-links">
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Schema</h2>
-                            <p>TimeEdit.net</p>
-                            <div class="progress"></div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                Schema
+                            </button>
+                        </h2>
+                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Schema IEA1:
+                                <a href="https://cloud.timeedit.net/lu/web/lth1/ri1X50gQ5560YfQQ95Z5174Y0Zy5007493Y68Q664.html"><i class="fa fa-arrow-right"></i></a>
+                            </div>
                         </div>
-                        <a href="https://cloud.timeedit.net/lu/web/lth1/ri1X50gQ5560YfQQ95Z5174Y0Zy5007493Y68Q664.html"><i class="fa fa-arrow-right"></i><p></p></a>
                     </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingTwo">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                Zoom-länkar
+                            </button>
+                        </h2>
+                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Matematik Övning:
+                                <a href="https://lu-se.zoom.us/j/66874209569"><i class="fa fa-arrow-right"></i></a><br><br>
+                                Datorkommunikation:
+                                <a href="https://lu-se.zoom.us/j/69090552880"><i class="fa fa-arrow-right"></i></a><br><br>
+                                Digitala System:
+                                <a href="https://lu-se.zoom.us/j/68399092104"><i class="fa fa-arrow-right"></i></a>
 
-
-                </div>
-            </div>
-
-        </div>
-
-
-
-
-
-        <div class="single-service">
-            <img src="img/rättzoom.png">
-            <div class="overlay"></div>
-            <div class="service-desc">
-                <h3>ZOOM-LÄNKAR</h3>
-                <hr>
-            </div>
-
-            <div class="service-desc-3">
-
-
-                <div class="zoom-links">
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Matematik Övning</h2>
-                            <p>zoom.com</p>
-
+                            </div>
                         </div>
-                        <a href="https://lu-se.zoom.us/j/66874209569"><i class="fa fa-arrow-right"></i><p></p></a>
                     </div>
-                    <div class="card">
-                        <div class="card-info">
-                            <h2>Datorkommunikation</h2>
-                            <p>zoom.com</p>
-
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="flush-headingThree">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                Kurshemsidor
+                            </button>
+                        </h2>
+                        <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body">
+                                Matematisk Analys:
+                                <a href="https://canvas.education.lu.se/courses/8908"><i class="fa fa-arrow-right"></i></a><br><br>
+                                Datorkommunikation:
+                                <a href="https://canvas.education.lu.se/courses/9909"><i class="fa fa-arrow-right"></i></a><br><br>
+                                Digitala System:
+                                <a href="https://www.eit.lth.se/index.php?ciuid=1352&L=0"><i class="fa fa-arrow-right"></i></a><br>
+                            </div>
                         </div>
-                        <a href="https://lu-se.zoom.us/j/69090552880"><i class="fa fa-arrow-right"></i><p></p></a>
                     </div>
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Digitala System</h2>
-                            <p>zoom.com</p>
-
-                        </div>
-                        <a href="https://lu-se.zoom.us/j/68399092104"><i class="fa fa-arrow-right"></i><p></p></a>
-
-                    </div>
-
-
 
                 </div>
+
+
             </div>
 
-        </div>
-
-
-
-
-
-
-
-        <div class="single-service">
-            <img src="img/dokument.png">
-            <div class="overlay"></div>
-            <div class="service-desc">
-                <h3>DOKUMENT</h3>
-                <hr>
-            </div>
-
-            <div class="service-desc-4">
-
-
-                <div class="zoom-links">
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Dokument</h2>
-                            <p>SimoIEA.tech</p>
-
-                        </div>
-                        <a href="dokument.html"><i class="fa fa-arrow-right"></i><p></p></a>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-
-
-
-
-
-        <div class="single-service">
-            <img src="img/böcker.png">
-            <div class="overlay"></div>
-            <div class="service-desc">
-                <h3>KURSHEMSIDOR</h3>
-                <hr>
-            </div>
-
-
-            <div class="service-desc-3">
-
-
-                <div class="zoom-links">
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Matematisk Analys 2</h2>
-                            <p>canvas.lu.se</p>
-                        </div>
-                        <a href="https://canvas.education.lu.se/courses/8908"><i class="fa fa-arrow-right"></i><p></p></a>
-                    </div>
-                    <div class="card">
-                        <div class="card-info">
-                            <h2>Datorkommunikation</h2>
-                            <p>canvas.lu.se</p>
-                            <div class="progress"></div>
-                        </div>
-                        <a href="https://canvas.education.lu.se/courses/9909"><i class="fa fa-arrow-right"></i><p></p></a>
-                    </div>
-                    <div class="card">
-
-                        <div class="card-info">
-                            <h2>Digitala System</h2>
-                            <p>eit.lth.se</p>
-                            <div class="progress"></div>
-                        </div>
-                        <a href="https://www.eit.lth.se/index.php?ciuid=1352&L=0"><i class="fa fa-arrow-right"></i><p></p></a>
-
-                    </div>
-
-
-
-                </div>
-            </div>
+            <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 54 54" style="enable-background:new 0 0 54 54;" xml:space="preserve">
+<g>
+	<path class="face" d="M27,8c-9.374,0-17,7.626-17,17c0,7.112,4.391,13.412,11,15.9V50c0,0.553,0.447,1,1,1h1v2c0,0.553,0.447,1,1,1h6
+		c0.553,0,1-0.447,1-1v-2h1c0.553,0,1-0.447,1-1v-9.1c6.609-2.488,11-8.788,11-15.9C44,15.626,36.374,8,27,8z M30,49
+		c-0.553,0-1,0.447-1,1v2h-4v-2c0-0.553-0.447-1-1-1h-1v-5h8v5H30z M31.688,39.242C31.277,39.377,31,39.761,31,40.192V42h-8v-1.808
+		c0-0.432-0.277-0.815-0.688-0.95C16.145,37.214,12,31.49,12,25c0-8.271,6.729-15,15-15s15,6.729,15,15
+		C42,31.49,37.855,37.214,31.688,39.242z"/>
+    <path class="face2" d="M27,6c0.553,0,1-0.447,1-1V1c0-0.553-0.447-1-1-1s-1,0.447-1,1v4C26,5.553,26.447,6,27,6z"/>
+    <path class="face2" d="M51,24h-4c-0.553,0-1,0.447-1,1s0.447,1,1,1h4c0.553,0,1-0.447,1-1S51.553,24,51,24z"/>
+    <path class="face2" d="M7,24H3c-0.553,0-1,0.447-1,1s0.447,1,1,1h4c0.553,0,1-0.447,1-1S7.553,24,7,24z"/>
+    <path class="face2" d="M43.264,7.322l-2.828,2.828c-0.391,0.391-0.391,1.023,0,1.414c0.195,0.195,0.451,0.293,0.707,0.293
+		s0.512-0.098,0.707-0.293l2.828-2.828c0.391-0.391,0.391-1.023,0-1.414S43.654,6.932,43.264,7.322z"/>
+    <path class="face2" d="M12.15,38.436l-2.828,2.828c-0.391,0.391-0.391,1.023,0,1.414c0.195,0.195,0.451,0.293,0.707,0.293
+		s0.512-0.098,0.707-0.293l2.828-2.828c0.391-0.391,0.391-1.023,0-1.414S12.541,38.045,12.15,38.436z"/>
+    <path class="face2" d="M41.85,38.436c-0.391-0.391-1.023-0.391-1.414,0s-0.391,1.023,0,1.414l2.828,2.828c0.195,0.195,0.451,0.293,0.707,0.293
+		s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414L41.85,38.436z"/>
+    <path class="face2" d="M12.15,11.564c0.195,0.195,0.451,0.293,0.707,0.293s0.512-0.098,0.707-0.293c0.391-0.391,0.391-1.023,0-1.414l-2.828-2.828
+		c-0.391-0.391-1.023-0.391-1.414,0s-0.391,1.023,0,1.414L12.15,11.564z"/>
+    <path  class="face3"d="M27,13c-6.617,0-12,5.383-12,12c0,0.553,0.447,1,1,1s1-0.447,1-1c0-5.514,4.486-10,10-10c0.553,0,1-0.447,1-1
+		S27.553,13,27,13z"/>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+                <g>
+</g>
+</svg>
 
 
 
         </div>
-
-
-
-
-
-
-
 
 
     </div>
@@ -226,7 +172,104 @@
 
 
 
+</section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
+
+<section id="d-service">
+    <div class="title-text">
+        <p>Dokument</p>
+    </div>
+
+    <div class="d-service-box">
+        <div class="single-service">
+            <div class="dokumentlänk">
+                <h3>Matematisk Analys</h3>
+                <hr>
+                <p>Dokument1</p>
+                <hr>
+                <p>Dokument1</p>
+                <hr>
+                <p>Dokument1</p>
+                <hr>
+                <p>Dokument1</p>
+                <hr>
+            </div>
+
+
+        </div>
+        <div class="single-service">
+            <div class="dokumentlänk">
+                <h3>Datorkommunikation</h3>
+                <hr>
+                <p>Dokument2</p>
+                <hr>
+                <p>Dokument2</p>
+                <hr>
+                <p>Dokument2</p>
+                <hr>
+                <p>Dokument2</p>
+                <hr>
+            </div>
+
+
+
+        </div>
+
+        <div class="single-service">
+            <div class="dokumentlänk">
+                <h3>Digitala System</h3>
+                <hr>
+                <p>Dokument3</p>
+                <hr>
+                <p>Dokument3</p>
+                <hr>
+                <p>Dokument3</p>
+                <hr>
+                <p>Dokument3</p>
+                <hr>
+            </div>
+
+
+        </div>
+
+        <div class="single-service">
+            <div class="dokumentlänk">
+                <h3>Extentor</h3>
+                <hr>
+                <p>Dokument4</p>
+                <hr>
+                <p>Dokument4</p>
+                <hr>
+                <p>Dokument4</p>
+                <hr>
+                <p>Dokument4</p>
+                <hr>
+
+            </div>
+        </div>
+
+    </div>
 
 
 </section>
@@ -271,20 +314,7 @@
             <p><i class="fa fa-square-o"></i> Matematisk Analys 2 </p><br>
             <p><i class="fa fa-square-o"></i> Datorkommunikation</p><br>
             <p><i class="fa fa-square-o"></i> Digitala System</p><br>
-            <p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br>
-            <p></p><br><p></p><br><p></p><br><p></p><br><p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
-            <p></p><br>
+
 
 
 
@@ -304,8 +334,7 @@
             <p><i class="fa fa-check-square"></i> Matematisk Analys 1</p><br>
             <p><i class="fa fa-check-square"></i> Programmering Java</p><br>
             <p><i class="fa fa-check-square"></i> Intro Elektroteknik</p><br>
-            <p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br>
-            <p></p><br><p></p><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br><p></p><br>
+
 
 
 
@@ -338,7 +367,6 @@
             <p><i class="fa fa-times"></i> Säkerhet</p><br>
             <p><i class="fa fa-times"></i> Programmering i Java - fortsättningskurs</p><br>
             <p><i class="fa fa-times"></i> Programmering i C++</p><br>
-            <p></p><br>
 
 
         </div>
