--- a/skola.html
+++ b/skola.html
@@ -32,8 +32,9 @@
     <nav>
         <ul>
             <li><a href="#banner">START</a></li>
-            <li><a href="#service">LÄNKAR</a></li>
+            <li><a href="#acordion">LÄNKAR</a></li>
             <li><a href="#testimonial">KURSER</a></li>
+            <li><a href="#progression">ÖVRIG DATA</a></li>
             <li><a href="#footer">OM</a></li>
         </ul>
     </nav>
@@ -348,6 +349,111 @@
 
 
 </section>
+
+
+
+<!-- progress -->
+
+
+<section id="progression">
+    <div class="title-text">
+        <p>Övrig Data</p>
+    </div>
+
+    <h4>Tid till kandidat:</h4>
+
+    <p id="demo"></p>
+    <script id="timer">
+        var deadline = new Date("Jun 10, 2023 15:00:00").getTime();
+        var x = setInterval(function() {
+            var now = new Date().getTime();
+            var t = deadline - now;
+            var days = Math.floor(t / (1000 * 60 * 60 * 24));
+            var hours = Math.floor((t%(1000 * 60 * 60 * 24))/(1000 * 60 * 60));
+            var minutes = Math.floor((t % (1000 * 60 * 60)) / (1000 * 60));
+            var seconds = Math.floor((t % (1000 * 60)) / 1000);
+            document.getElementById("demo").innerHTML = days + "d "
+                + hours + "h " + minutes + "m " + seconds + "s ";
+            if (t < 0) {
+                clearInterval(x);
+                document.getElementById("demo").innerHTML = "EXPIRED";
+            }
+        }, 1000);
+    </script>
+    <div class="streck">
+        <hr>
+    </div>
+
+    <div class="progg">
+
+        <p>Progress: Matematisk Analys 2</p>
+
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 17%;" aria-valuenow="17" aria-valuemin="0" aria-valuemax="100">17%</div>
+        </div>
+        <hr>
+        <p>Progress: Datorkommunikation</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 14%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">14%</div>
+        </div>
+        <hr>
+        <p>Progress: Digitala System</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 33%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">33%</div>
+        </div>
+    </div>
+
+
+    <br>
+    <div class="streck">
+        <hr>
+    </div>
+
+
+    <div class="progg1">
+
+        <p>Antal Skrivna Tentor: </p>
+
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="17" aria-valuemin="0" aria-valuemax="100">4 / 4</div>
+        </div>
+        <hr>
+        <p>Antal Klarade Tentor:</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4 / 4</div>
+        </div>
+        <hr>
+        <p>Average Kursbetyg: Skala U, 3, 4, 5</p>
+        <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4 . 0</div>
+        </div>
+    </div>
+
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <script>
