uppdatering av utseende skola/länkar, +lampa animation, färgbyte till,blå, fixat iphoneformat test 2
Section Övrig Data tillagd. Kandidat count down, Progress bars test 2

Uppdateringshistorik uppdaterad

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <p>02/02: Uppdatering av länkar; Skola/Länkar/Kurshemsidor <br>
             Uppdatering av länkar; Skola/Länkar/Zoom-länkar</p>
         <hr>
+        <p>02/05: Nytt utseende av /Skola/Länkar. /Skola/Länkar/Dokument finns nu istället under /Skola. <br>
+            Nya sektionen "Övrig Data" tillagd under /Skola med en countdown och progress bars. </p>
+        <hr>
 
 
     </div>
@@ -104,7 +107,7 @@
        <div class="footer-left">
            <h1>Allmänt</h1>
            <p><i class="fa fa-info"></i> Denna sida uppdateras kontinuerligt</p>
-           <p><i class="fa fa-info"></i> Senast uppdaterad: 02/02</p>
+           <p><i class="fa fa-info"></i> Senast uppdaterad: 02/05</p>
            <p><i class="fa fa-info"></i> Sida används enbart för skolrelaterat syfte</p>
 
        </div>
