--- a/skola.html
+++ b/skola.html
@@ -412,18 +412,18 @@
 
     <div class="progg1">
 
-        <p>Antal Skrivna Tentor: </p>
+        <p>Antal skrivna tentor: </p>
 
         <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="17" aria-valuemin="0" aria-valuemax="100">4 / 4</div>
         </div>
         <hr>
-        <p>Antal Klarade Tentor:</p>
+        <p>Antal klarade tentor:</p>
         <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4 / 4</div>
         </div>
         <hr>
-        <p>Average Kursbetyg: Skala U, 3, 4, 5</p>
+        <p>Average kursbetyg: skala U, 3, 4, 5</p>
         <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">4 . 0</div>
         </div>
